Issue #35 - Add ignoredDomains key to config.json.example

--- a/config.json.example
+++ b/config.json.example
@@ -3,6 +3,7 @@
   "listDir": "data/",
   "bugzillaKey": "",
   "githubKey": "",
+  "ignoredDomains": [],
   "maxDate": null,
   "writers": [
     "user@example.com"
