Issue #35 - Add known domains to ignore to config example

--- a/config.json.example
+++ b/config.json.example
@@ -3,7 +3,11 @@
   "listDir": "data/",
   "bugzillaKey": "",
   "githubKey": "",
-  "ignoredDomains": [],
+  "ignoredDomains": [
+    "github.com",
+    "github.io",
+    "t.co"
+  ],
   "maxDate": null,
   "writers": [
     "user@example.com"
