Issue #77 - Put QA details into our config
(and rename the helper methods to be more generic)

--- a/config.json.example
+++ b/config.json.example
@@ -8,6 +8,12 @@
     "github.io",
     "t.co"
   ],
+  "ignoredGitHubAccounts": [
+    "softvision-oana-arbuzov",
+    "softvision-sergiulogigan",
+    "cipriansv"
+  ],
+  "ignoredQADomain": "@softvision.ro",
   "maxDate": null,
   "minDate": "2018",
   "spreadsheetId": null,
