Issue #82 - Catch any non-Romanian softvision bugs

--- a/config.json.example
+++ b/config.json.example
@@ -13,7 +13,7 @@
     "softvision-sergiulogigan",
     "cipriansv"
   ],
-  "ignoredQADomain": "@softvision.ro",
+  "ignoredQADomain": "@softvision",
   "maxDate": null,
   "minDate": "2018",
   "spreadsheetId": null,
