Issue #101 - Update README and config.json.example

--- a/config.json.example
+++ b/config.json.example
@@ -14,6 +14,7 @@
     "cipriansv"
   ],
   "ignoredQADomain": "@softvision",
+  "ignoreFenix": true,
   "maxDate": null,
   "minDate": "2018",
   "spreadsheetId": null,
