Issue #115 - Clone the document at the end of all operations

--- a/config.json.example
+++ b/config.json.example
@@ -18,7 +18,7 @@
   "ignoreFenix": true,
   "maxDate": null,
   "minDate": "2018",
-  "spreadsheetId": null,
+  "startingSpreadsheetId": null,
   "writers": [
     "user@example.com"
   ]
