Issue #115 - Make currentDoc.json location configurable

--- a/config.json.example
+++ b/config.json.example
@@ -3,6 +3,7 @@
   "listDir": "data/",
   "bugzillaKey": "",
   "githubKey": "",
+  "currentDocPath": ".",
   "ignoredDomains": [
     "github.com",
     "github.io",
