--- a/package.json
+++ b/package.json
@@ -26,9 +26,13 @@
     "@octokit/plugin-retry": "^2.2.0",
     "@octokit/plugin-throttling": "^2.6.0",
     "@octokit/rest": "^16.28.2",
+    "add": "^2.0.6",
     "escape-string-regexp": "^2.0.0",
+    "eslint-config-prettier": "^6.7.0",
+    "eslint-plugin-prettier": "^3.1.1",
     "googleapis": "^40.0.0",
     "node-fetch": "^2.5.0",
+    "prettier": "^1.19.1",
     "promise-fn-retry": "^1.0.10",
     "replace-in-file": "^4.1.0"
   },
