--- a/package.json
+++ b/package.json
@@ -39,6 +39,19 @@
   "devDependencies": {
     "eslint": "^5.16.0",
     "eslint-plugin-import": "^2.18.0",
+    "husky": "^3.1.0",
+    "lint-staged": "^9.4.3",
     "npm-run-all": "^4.1.5"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
+  },
+  "lint-staged": {
+    "*.js": [
+      "eslint --fix",
+      "git add"
+    ]
   }
 }
